# photonic_lattice

./: CMakeLists.txt  Readme.md  license.txt
Tests/: CMakeLists.txt  tests.cpp
blender_plugin/: blender_plugin.py  visualization.blend
data/: Histogram.py  distance_dependency.py  export_to_pdf.js  percolation.py  purified_vs_orig.py  timing.py
data/distance_data/: combined_15  combined_20  combined_25  combined_30  combined_35
data/distance_data/small_structure/: combined_15  combined_20  combined_25  combined_30  combined_35  combined_40
data/histogram_data/: averages  distribution_10  distribution_12  distribution_14  distribution_16  distribution_18  distribution_20  distribution_24  distribution_28  distribution_32  distribution_40  tmp_average.py
data/percolation_data/: percolation_20  percolation_80
data/plots/: distance_dependency.html  histogram.html  purified_vs_orig.html  small_structure_distance_dependency.html  small_structure_purified_vs_orig.html  timing.html
data/purified_vs_orig_data/: dist_12  dist_16  dist_20  dist_28  dist_36  dist_44
data/purified_vs_orig_data/small_structure/: dist_12  dist_16  dist_24  dist_32  dist_40  dist_6  dist_8
data/purified_vs_orig_data/tmp/: dist_12  dist_16  dist_20  dist_28  dist_36  dist_44
data/timing_data/: timing
include/: Graph.hpp  Parallel.hpp  Purify.hpp  basic_includes.hpp  json.hpp
src/: CMakeLists.txt  Graph.cpp  Parallel.cpp  Purify.cpp  main.cpp  percolation_test.cpp  plot_path.cpp
visual/: graph2js.sh  index.html  main.js  worker.js
visual/libs/: PalerBoxBufferGeometry.js
